# dlcookbook-dlbs

docker/: versions
docker/tensorrt/cuda9-cudnn7/: Dockerfile
python/caffe2_benchmarks/models/: inception_resnet_v2.py
python/dlbs/configs/: nvcnn.json  tensorflow.json  tensorrt.json
python/mxnet_benchmarks/models/: alexnet.py
python/nvcnn_benchmarks/: nvcnn.py
python/tf_cnn_benchmarks/models/: alexnet_model.py  model_config.py
scripts/: make_imagenet_data.sh
scripts/launchers/: nvcnn.sh  tensorrt.sh
src/tensorrt/: .gitignore  CMakeLists.txt  calibrator.hpp  data_providers.hpp  infer_engine.hpp  infer_msg.hpp  infer_task.hpp  logger.hpp  main.cpp  queues.hpp  utils.hpp
src/tensorrt/docs/: README.md
src/tensorrt/src/core/: infer_engine.cpp  infer_engine.hpp  infer_msg.hpp  logger.cpp  logger.hpp  utils.cpp  utils.hpp
src/tensorrt/src/core/dataset/: dataset.cpp  dataset.hpp  image_dataset.cpp  image_dataset.hpp  tensor_dataset.cpp  tensor_dataset.hpp
src/tensorrt/src/engines/: mgpu_engine.hpp  tensorrt_engine.cpp  tensorrt_engine.hpp
src/tensorrt/src/engines/tensorrt/: calibrator.hpp  tensorrt_utils.cpp  tensorrt_utils.hpp
src/tensorrt/tests/: tests_tensor_dataset.cpp  tests_utils.cpp
src/tensorrt/tools/: README.md  benchmark_tensor_dataset.cpp  images2tensors.cpp  tensorrt.cpp
tutorials/dlcookbook/: nvcnn.sh  tensorrt.sh
tutorials/dlcookbook/tensorrt/: benchmark_data_pipeline.sh  benchmark_data_prefetchers.sh  benchmark_host2device_copy.sh  benchmark_tensor_dataset.sh  compute_mprocess_throughput.py  compute_mprocess_throughput.sh  make_tensor_data.sh  make_tensor_dataset.sh  real_inference.sh  real_inference_2.sh  real_inference_4.sh  real_inference_8.sh  real_mprocess_inference.sh  sprocess_inference.sh  synthetic_inference.sh  synthetic_inference_1.sh  synthetic_inference_2.sh  synthetic_inference_4.sh  synthetic_inference_8.sh  synthetic_mprocess_inference.sh
